# langmanus

./: .env.example  .gitignore  Makefile  README.md  README_ja.md  README_zh.md  crawler.test.py  main.py  pyproject.toml  server.py
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: event-stream-protocol
src/: workflow.py
src/agents/: __init__.py  agents.py  llm.py
src/api/: __init__.py  app.py
src/config/: __init__.py  agents.py  env.py
src/crawler/: __init__.py  article.py  crawler.py  crawler_tool.py  jina_client.py  markdown_to_message_content.py  readability_extractor.py  readability_parser.py
src/graph/: builder.py  nodes.py  types.py
src/llms/: litellm_v2.py
src/prompts/: coordinator.md  planner.md  supervisor.md  template.py
src/service/: workflow_service.py
src/tools/: __init__.py  bash_tool.py  browser.py  crawl.py  decorators.py  file_management.py  python_repl.py  search.py
tests/integration/: test_team_config.py
